[package]
name = "lunar"
version = "0.1.0"
authors = ["Hadrian Rodriguez <hadrian.rodriguez@imdea.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ark-std = {git = "https://github.com/arkworks-rs/utils", default-features = false}
#ark-relations = {git = "https://github.com/arkworks-rs/snark", default-features = false}
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }
ark-serialize-derive = { version = "^0.3.0", optional = true }
ark-poly = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-marlin = {git = "https://github.com/arkworks-rs/marlin", default-features = false }

ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }
ark-test-curves = {  version = "^0.3.0", default-features = false, features = [ "bls12_381_curve", "bn384_small_two_adicity_curve"] }

rand = { version = "0.8", default-features = false, features = ["std_rng"]}
rand_core = "0.6.0"
itertools = "0.10.0"
criterion = "0.3.0"
dict = "0.1.5"
rand_chacha = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9", default-features = false }

serde = { version = "^1.0", features = ["derive"] }

serde_json = "^1.0"



[dev-dependencies]
rand = { version = "0.8", features = ["std"]}
ark-bls12-381 = { version = "^0.3.0", default-features = false, features = ["curve"] }


[patch.crates-io]
#ark-std = { git = "https://github.com/arkworks-rs/std" }
#ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
#ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
#ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
#ark-serialize-derive = { git = "https://github.com/arkworks-rs/algebra" }
#ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }
#ark-bls12-377 = { git = "https://github.com/arkworks-rs/curves" }
#ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }

[[bench]]
name = "lunar_bench"
path = "benches/lunar_benches.rs"
harness = false

[lib]
name = "lunar_lib"
path = "src/lib.rs"
